--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./output.css" rel="stylesheet">
+    <link href="./public/output.css" rel="stylesheet">
     <link rel="stylesheet" href="./input.css">
     <title>Tailwind Project</title>
 </head>
