--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./public/output.css" rel="stylesheet">
+    <link href="./output.css" rel="stylesheet">
     <link rel="stylesheet" href="./input.css">
+    
     <title>Tailwind Project</title>
 </head>
 <body>
@@ -339,6 +340,6 @@
         </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
